[gd_scene load_steps=4 format=3 uid="uid://bcq04ffyaufaf"]

[ext_resource type="Script" path="res://maingamenode.gd" id="1_7dfl2"]
[ext_resource type="Script" path="res://HUD.gd" id="2_psa2n"]
[ext_resource type="PackedScene" uid="uid://coo3lrmajxw2q" path="res://tofu.tscn" id="3_ofir7"]

[node name="MainGame" type="Node"]
script = ExtResource("1_7dfl2")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("2_psa2n")

[node name="StartButton" type="Button" parent="HUD"]
offset_left = 496.0
offset_top = 284.0
offset_right = 589.0
offset_bottom = 361.0
text = "Y'all silly?
Just Gonna
Send It"

[node name="Tofu" parent="." instance=ExtResource("3_ofir7")]

[node name="UserStartPosition" type="Marker2D" parent="."]
position = Vector2(89, 500)

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
